tests/health/gold/sdk/lib__drivers__sara_r5.toit.gold
<sdk>/drivers/ublox_cellular.toit:558:30: error: Super of a class must be a class
class Interface_ extends net.Interface:
                             ^~~~~~~~~
<sdk>/at/session.toit:117:14: error: Can't instantiate abstract class
        i := int.parse_ line index end --on_error=: null
             ^~~
<sdk>/at/session.toit:117:17: warning: Deprecated use of static method syntax to call an unnamed constructor. Use (<Class>).<member> instead.
        i := int.parse_ line index end --on_error=: null
                ^
<sdk>/drivers/cellular_base.toit:89:34: warning: Class 'COPS' is deprecated
      result := session.send COPS.scan
                                 ^
<sdk>/drivers/cellular_base.toit:97:11: warning: Class 'Operator' is deprecated
          Operator o[3] --rat=rat
          ^~~~~~~~
<sdk>/drivers/cellular_base.toit:112:26: warning: Class 'COPS' is deprecated
        session.send COPS.automatic
                         ^
<sdk>/drivers/cellular_base.toit:123:34: warning: Class 'COPS' is deprecated
        res := (session.send COPS.read).last
                                 ^
<sdk>/drivers/cellular_base.toit:125:18: warning: Class 'Operator' is deprecated
          return Operator res[2]
                 ^~~~~~~~
<sdk>/drivers/cellular_base.toit:129:25: warning: Class 'COPS' is deprecated
    at_.do: it.send COPS.deregister
                        ^
<sdk>/drivers/cellular_base.toit:145:24: warning: Class 'CFUN' is deprecated
      session.send CFUN.online
                       ^
<sdk>/drivers/cellular_base.toit:152:22: warning: Class 'CFUN' is deprecated
    session.send CFUN.offline
                     ^
<sdk>/drivers/cellular_base.toit:155:32: warning: Class 'CFUN' is deprecated
    result := session.send CFUN.get
                               ^
<sdk>/drivers/cellular_base.toit:262:15: warning: Class 'COPS' is deprecated
          COPS.manual operator.op --timeout=timeout --rat=operator.rat
              ^
<sdk>/drivers/ublox_cellular.toit:540:5: error: Type mismatch. Expected 'Interface'. Got 'Interface_'
    return Interface_ this
    ^~~~~~
<sdk>/drivers/sara_r5.toit:43:11: warning: Class 'CFUN' is deprecated
      CFUN.reset --reset_sim
          ^
<sdk>/drivers/sara_r5.toit:26:5: warning: Class 'UBloxCellular' is deprecated
    super
    ^~~~~
<sdk>/drivers/ublox_cellular.toit:48:14: warning: Class 'SocketState_' is deprecated
  state_ ::= SocketState_
             ^~~~~~~~~~~~
<sdk>/drivers/ublox_cellular.toit:281:19: warning: Class 'UBloxConstants' is deprecated
      --constants=UBloxConstants
                  ^~~~~~~~~~~~~~
<sdk>/drivers/ublox_cellular.toit:280:5: warning: Class 'CellularBase' is deprecated
    super uart at_session
    ^~~~~
<sdk>/drivers/cellular.toit:112:12: warning: Class 'GnssLocation' is deprecated
    return GnssLocation
           ^~~~~~~~~~~~
<sdk>/core/numbers.toit:593:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:597:12: warning: Deprecated 'int.parse'
    return parse data from to --radix=radix --on_error=: throw it
           ^~~~~
<sdk>/core/numbers.toit:606:12: warning: Deprecated 'int.parse'
    return parse data 0 data.size --radix=radix --on_error=on_error
           ^~~~~
<sdk>/core/string.toit:327:14: warning: Deprecated 'int.parse'
        : int.parse format start (pos - 1) --radix=10 --on_error=: throw it
             ^
<sdk>/at/session.toit:117:18: error: Class 'int' does not have any method 'parse_'
        i := int.parse_ line index end --on_error=: null
                 ^~~~~~
